fixed word wrapping and color contrast

--- a/passwordDB/window.css
+++ b/passwordDB/window.css
@@ -1,10 +1,20 @@
 .search-window {
   position: fixed; /* or absolute */
   top: 25%;
-  bottom: 25%;
+  //bottom: 25%;
   left: 25%;
   right: 25%;
   margin: auto;
   padding: 20px;
-  background: #f0e68c;
+  background: #3a3938;
     }
+
+input#search-text, textarea {
+  color: #dce7ea;
+}
+p#result{
+  word-wrap: break-word;
+}
+p#result, textarea{
+  color: #dce7ea;
+}
